2003-10-27  Stephane Carrez  <stcarrez@nerim.fr>

	* m68hc11-dis.c: Convert to ISO C90 prototypes.

2003-10-21  Peter Barada  <pbarada@mail.wm.sps.mot.com>
            Bernardo Innocenti  <bernie@develer.com>

	* m68k-dis.c: Add MCFv4/MCF5528x support.
	* m68k-opc.c: Likewise.

2003-10-10  Dave Brolley  <brolley@redhat.com>

	* frv-asm.c,frv-desc.c,frv-opc.c: Regenerated.

2003-10-08  Dave Brolley  <brolley@redhat.com>

	* frv-desc.[ch], frv-opc.[ch]: Regenerated.

2003-09-30  Bob Wilson  <bob.wilson@acm.org>

	* xtensa-dis.c (fetch_data): Remove numBytes parameter.
	(print_insn_xtensa): Fix call to fetch_data.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* mips-dis.c (mips_arch_choices): Add entry for "mips64r2"
	(print_insn_args): Add handing for +E, +F, +G, and +H.
	* mips-opc.c (I65): New define for MIPS64r2.
	(mips_builtin_opcodes): Add "dext", "dextm", "dextu", "dins",
	"dinsm", "dinsu", "drotl", "drotr", "drotr32", "drotrv", "dsbh",
	and "dshd" for MIPS64r2.  Adjust "dror", "dror32", and "drorv" to
	be supported on MIPS64r2.

2003-09-24  Dave Brolley  <brolley@redhat.com>

	* frv-desc.c, frv-opc.c, frv-opc.h: Regenerated.

2003-09-14  Andreas Jaeger  <aj@suse.de>

	* i386-dis.c: Convert to ISO C90 prototypes.
	* i370-dis.c: Likewise.
	* i370-opc.c: Likewiwse.
	* i960-dis.c: Likewise.
	* ia64-opc.c: Likewise.

2003-09-09  Dave Brolley  <brolley@redhat.com>

	* frv-desc.c: Regenerated.

2003-09-08  Dave Brolley  <brolley@redhat.com>

	On behalf of Doug Evans <dje@sebabeach.org>
	* Makefile.am (run-cgen): Pass new args archfile and opcfile
	to cgen.sh.
	(stamp-ip2k,stamp-m32r,stamp-fr30,stamp-frv,stamp-openrisc,
	stamp-iq2000,stamp-xstormy16): Pass paths of .cpu and .opc files
	to cgen.sh.
	(stamp-frv): Delete hardcoded path spec workaround.
	* Makefile.in: Regenerate.
	* cgen.sh: New args archfile and opcfile.  Pass on to cgen.

2003-09-04  Nick Clifton  <nickc@redhat.com>

	* v850-dis.c (disassemble): Accept bfd_mach_v850e1.